# Sofa

./: .gitignore  CMakeLists.txt  ImplementationNotes.md  README.md  ToDo.md  dependencies.md  easy-settings.cmake  settings.cmake  update.sh
projects/Sofa/kernel_task/: CMakeLists.txt
projects/Sofa/kernel_task/CPIOFiles/: file
projects/Sofa/kernel_task/src/: Allocator.c  Allocator.h  Blk.c  Blk.h  DKService.c  DKService.h  DeviceTree.c  DeviceTree.h  DriverBase.h  Environ.c  Environ.h  KThread.c  KThread.h  LList.c  LList.h  Log.c  Log.h  NameServer.c  NameServer.h  Nameserver.c  Nameserver.h  Net.c  NetService.c  NetService.h  Panic.c  Panic.h  ProcService.c  ProcService.h  Process.c  Process.h  ProcessList.c  ProcessList.h  Reboot.c  Reboot.h  Serial.c  Serial.h  Thread.c  Thread.h  ThreadContext.c  ThreadContext.h  (+28 more)
projects/Sofa/kernel_task/src/DeviceKit/: DeviceKit.c  DeviceKit.h  DeviceTree.c  DeviceTree.h  DriverBase.c  DriverBase.h  IODevice.c  IODevice.h  IODriver.c  IODriver.h  IONode.c  IONode.h  IRQServer.c  IRQServer.h
projects/Sofa/kernel_task/src/Drivers/: Blk.c  Blk.h  Net.c  Net.h  Serial.c  Serial.h  X86Expert.c  X86Expert.h
projects/Sofa/kernel_task/src/FS/: Ext2.c  Ext2.h  MBR.h  VFS.c  VFS.h  cpio.c  cpio.h  devFS.c  devFS.h  ext2.c  ext2.h  ext2FS.c  ext2FS.h  fakefs.c  fakefs.h
projects/Sofa/kernel_task/src/NameServer/: BaseService.c  BaseService.h  NameServer.c  NameServer.h
projects/Sofa/kernel_task/src/Syscalls/: exit.c  (+14 more)
projects/Sofa/libLoader/: CMakeLists.txt  README.md
projects/Sofa/libLoader/include/: loader.h
projects/Sofa/libLoader/src/: interface.c  lib-support.h  loader.c
projects/Sofa/libSofa/: CMakeLists.txt
projects/Sofa/libSofa/include/: Sofa.h  Spawn.h  Thread.h  constants.h  dk.h  files.h  init.h  net.h  proc.h  proc_ctx.h  runtime.h  sys_calls.h  test.h  test_init_data.h
projects/Sofa/libSofa/src/: Pid.c  Sofa.c  Spawn.c  Thread.c  Time.c  Utils.c  Utils.h  dk.c  files.c  helpers.c  libc.c  net.c  proc.c  proc_env.c  runtime.c  sleep.c  syscalls.c  syscalls.h
projects/apps/app/: CMakeLists.txt
projects/apps/app/src/: main.c
projects/apps/driverkitd/: CMakeLists.txt
projects/apps/driverkitd/src/: main.c
projects/apps/init/: CMakeLists.txt
projects/apps/init/src/: main.c
projects/apps/test/: CMakeLists.txt
projects/apps/test/src/: main.c
projects/init/: CMakeLists.txt
projects/init/devel/: Init_UnitTests.c  main.c
projects/init/devel/DevelSofaInit.xcodeproj/: project.pbxproj
projects/init/devel/UnitTests/: DevServer_UnitTests.c  DevServer_UnitTests.h  DriverKit_UnitTests.c  DriverKit_UnitTests.h  FileServer_UnitTests.c  FileServer_UnitTests.h  Init_UnitTests.c  Init_UnitTests.h  Other_UnitTests.c  ProcessTable_UnitTests.c  ProcessTable_UnitTests.h  TimersWheel_UnitTests.c  TimersWheel_UnitTests.h
projects/init/src/: Bootstrap.c  Bootstrap.h  CpioServer.c  CpioServer.h  Credentials.h  DevServer.c  DevServer.h  DriverKit.c  DriverKit.h  EGADriver.c  EGADriver.h  FileServer.c  FileServer.h  IODevice.c  IODevice.h  MainLoop.c  MainLoop.h  Process.c  ProcessDef.h  ProcessTable.c  ProcessTable.h  Sofa.h  StringOperations.c  StringOperations.h  SysCalls.h  SysCallsBase.c  Timer.c  Timer.h  Utils.c  Utils.h  fs.c  fs.h  main.c
projects/init/src/Devices/: Terminal.c  Terminal.h
projects/init/src/Drivers/: EGADriver.c  EGADriver.h  Keyboard.c  Keyboard.h
projects/init/src/SysCalls/: Close.c  Dir.c  GetSetPriority.c  OpenClose.c  Time.c  execve.c  exit.c  getpid.c  kill.c  lseek.c  open.c  wait4.c
projects/init/src/TimerWheel/: TimersWheel.c  TimersWheel.h  timeout-bitops.c
projects/kernel_task/: CMakeLists.txt
projects/kernel_task/devel/: main.c
projects/kernel_task/devel/DevelSofaInit.xcodeproj/: project.pbxproj
projects/kernel_task/devel/UnitTests/: DevServer_UnitTests.c  FileServer_UnitTests.c  Identity_UnitTests.c  Identity_UnitTests.h  Init_UnitTests.c  Other_UnitTests.c  Other_UnitTests.h  ProcessTable_UnitTests.c
projects/kernel_task/kernel_task.xcworkspace/: contents.xcworkspacedata
projects/kernel_task/src/: Bootstrap.c  Bootstrap.h  Config.h  CpioServer.c  CpioServer.h  Credentials.c  Credentials.h  DMA.c  DMA.h  DevServer.c  DriverKit.c  DriverKit.h  File.c  File.h  FileServer.c  FileServer.h  IODevice.c  IODevice.h  MainLoop.c  MainLoop.h  NameServer.c  NameServer.h  Network.c  Network.h  Panic.c  Process.c  Process.h  ProcessDef.h  ProcessSysCall.c  ProcessSysCall.h  ProcessTable.c  ProcessTable.h  Sofa.h  Stats.c  Stats.h  StringOperations.c  StringOperations.h  SysCallNum.h  SysCalls.h  SysHandler.c  (+13 more)
projects/kernel_task/src/Devices/: Null.c  Null.h  Terminal.c  Terminal.h
projects/kernel_task/src/Drivers/: EGADriver.c  EGADriver.h  Fat.c  Fat.h  Keyboard.c  Keyboard.h  Serial.c  Serial.h  Usb.c  Usb.h  bga.c
projects/kernel_task/src/KObject/: KObject.c  KObject.h
projects/kernel_task/src/SysCalls/: Caps.c  Debug.c  GetSetPriority.c  IO.c  Misc.c  Proc.c  Servers.c  Time.c  chdir.c  close.c  debugSys.c  execve.c  exit.c  fcntl.c  getcwd.c  geteuid.c  getpid.c  kill.c  lseek.c  mkdir.c  nanosleep.c  open.c  read.c  setresuid.c  stat.c  time.c  unlink.c  wait4.c  write.c
projects/kernel_task/src/TimerWheel/: TimersWheel.c  queue.h  timeout.c  timeout.h
projects/kernel_task/src/Utils/: cansid.c  cansid.h
projects/kernel_task/src/arch/: UserException.c
projects/libSysCall/: CMakeLists.txt
projects/libSysCall/include/: SysCallNum.h  SysCalls.h  SysCaps.h  SysClient.h  foo.h
projects/libSysCall/src/: IPC.c  SysCallsList.h  SysClient.c  chdir.c  clockgettime.c  close.c  execve.c  exit.c  fcntl.c  getcwd.c  getpid.c  getppid.c  getsetpriority.c  gettimeofday.c  init.c  kill.c  lseek.c  mkdir.c  nanosleep.c  open.c  read.c  stat.c  wait4.c  write.c  writev.c
projects/libdatastruct/: CMakeLists.txt
projects/libdatastruct/include/data_struct/: cbpool.h  chash.h  cmacros.h  coat.h  cpool.h  cqueue.h  csstring.h  cvector.h
projects/libdatastruct/src/: chash.c  cqueue.c  cvector.c
projects/sel4rt/: CMakeLists.txt
projects/sel4rt/src/: crt1.c  start.c  start.h
(+149 files in other folders)
